--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,55 @@
+async-generator==1.10
+attrs==23.1.0
+bcrypt==4.0.1
+beautifulsoup4==4.12.0
+blinker==1.6.2
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+comtypes==1.1.14
+exceptiongroup==1.1.1
+flash==1.0.3
+Flask==2.2.3
+Flask-Admin==1.6.1
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.2
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==3.0.3
+Flask-WTF==1.1.1
+greenlet==2.0.2
+gunicorn==21.2.0
+h11==0.14.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+mysqlclient==2.1.1
+newsapi==0.1.1
+outcome==1.2.0
+packaging==23.1
 psycopg2==2.9.7
+pycountry==22.3.5
+pycparser==2.21
+pygame==2.3.0.dev2
+PyPDF2==3.0.1
+pypiwin32==223
+PySocks==1.7.1
+pyttsx3==2.90
+pywin32==305
+requests==2.28.2
+selenium==4.10.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4
+SpeechRecognition==3.10.0
+SQLAlchemy==2.0.10
+trio==0.22.0
+trio-websocket==0.10.3
+typing_extensions==4.5.0
+urllib3==1.26.15
+Werkzeug==2.2.3
+wikipedia==1.4.0
+wsproto==1.2.0
+WTForms==3.0.1
