--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,13 @@ newsapi==0.1.1
 outcome==1.2.0
 packaging==23.1
 psycopg2==2.9.7
+pycountry==22.3.5
+pycparser==2.21
+pygame==2.3.0.dev2
+PyPDF2==3.0.1
 
+PySocks==1.7.1
+pyttsx3==2.90
 
 requests==2.28.2
 selenium==4.10.0
@@ -40,7 +46,6 @@ soupsieve==2.4
 
 SQLAlchemy==2.0.10
 
-typing_extensions==4.5.0
 urllib3==1.26.15
 Werkzeug==2.2.3
 wikipedia==1.4.0
